<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/menu_bar_background"
            android:scaleType="centerInside"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/edit"
            android:textColor="#000000"
            android:textSize="25sp"
            android:gravity="center"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:singleLine="true"
            style="@style/EditTextStyle"
            android:hint="@string/title"
            android:paddingLeft="10dp"
            android:textColorHint="#b49898"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <EditText
            android:id="@+id/et_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:textColor="#000000"
            style="@style/EditTextStyle"
            android:textSize="20sp"
            android:hint="@string/content"
            android:textColorHint="#b49898"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#8db3f5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFFFFF">
        <ImageView
            android:id="@+id/iv_pic"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:background="@drawable/xiangji"/>
        <View
            android:layout_width="20dp"
            android:layout_height="50dp"/>
        <ImageView
            android:id="@+id/iv_shipin"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:background="@drawable/shipin"/>
        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/iv_done"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:background="@drawable/done"
            android:layout_gravity="end"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFFFFF">
        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/insert_pic"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="16sp"/>
        <View
            android:layout_width="20dp"
            android:layout_height="16dp"/>
        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/insert_shipin"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="16sp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>