<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:focusable="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/image_article"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="没道云笔记"
                android:textStyle="bold"
                android:textColor="#5b47f1"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Created by Candy"
                android:textStyle="italic"
                android:textColor="#a9a7b5"
                android:textSize="15sp"/>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:inputType="text"
        android:hint="@string/please_input_name"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textColorHint="#8e7d7d"
        android:paddingLeft="10dp"
        style="@style/EditTextStyle"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:hint="@string/please_input_password"
        android:textSize="20sp"
        android:textColorHint="#8e7d7d"
        android:textColor="#000000"
        android:paddingLeft="10dp"
        android:maxLength="8"
        style="@style/EditTextStyle"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:background="@drawable/selector_btn_login"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <Button
        android:id="@+id/btn_sign"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:background="@drawable/selector_btn_sign"
        android:text="@string/sign"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>